2017-03-31  Jonathan Bedard  <jbedard@apple.com>

        webkitpy: Add target host concept
        https://bugs.webkit.org/show_bug.cgi?id=170186
        <rdar://problem/31301797>

        Reviewed by Alexey Proskuryakov.

        Adding the idea of a target host. Target hosts are objects conforming to the
        structure of the SystemHost object in Scripts/webkitpy/common/system/systemhost.py
        Target hosts are the hosts associated with a worker process.

        * Scripts/webkitpy/common/system/filesystem.py:
        (FileSystem.map_base_host_path): Convert a path from an absolute path on the base
        host to an absolute path on this host.
        (FileSystem.move_to_base_host): Move file from this host to the base host.
        (FileSystem.move_from_base_host): Move file from the base host to this host.
        (FileSystem.copy_to_base_host): Copy file from this host to the base host.
        (FileSystem.copy_from_base_host): Copy file from the base host to this host.
        * Scripts/webkitpy/common/system/filesystem_mock.py:
        (MockFileSystem.map_base_host_path): Convert a path from an absolute path on the base
        host to an absolute path on this host.
        (MockFileSystem.move_to_base_host): Move file from this host to the base host.
        (MockFileSystem.move_from_base_host): Move file from the base host to this host.
        (MockFileSystem.copy_to_base_host): Copy file from this host to the base host.
        (MockFileSystem.copy_from_base_host): Copy file from the base host to this host.
        * Scripts/webkitpy/port/base.py:
        (Port.target_host): Return host determined by worker number.
        (Port.abspath_for_test): Accept optional target_host argument to return location
        of test on a target host.
        (Port._driver_tempdir): Accept optional target_host argument to return a temporary
        directory on a target host.