@@ -29,6 +29,8 @@ list(APPEND WebKitTestRunner_INCLUDE_DIRECTORIES
     ${WEBKIT_TESTRUNNER_DIR}/cocoa
     ${WEBKIT_TESTRUNNER_DIR}/mac
     ${WEBKIT_TESTRUNNER_INJECTEDBUNDLE_DIR}/mac
+    ${WEBKIT_TESTRUNNER_SHARED_DIR}/EventSerialization/mac
+    ${WEBKIT_TESTRUNNER_SHARED_DIR}/spi
     ${CMAKE_SOURCE_DIR}/WebKitLibraries
 )
 
@@ -46,6 +48,9 @@ list(APPEND WebKitTestRunnerInjectedBundle_SOURCES
     ${WEBKIT_TESTRUNNER_INJECTEDBUNDLE_DIR}/mac/AccessibilityTextMarkerMac.mm
     ${WEBKIT_TESTRUNNER_INJECTEDBUNDLE_DIR}/mac/AccessibilityUIElementMac.mm
     ${WEBKIT_TESTRUNNER_INJECTEDBUNDLE_DIR}/mac/TestRunnerMac.mm
+
+    ${WEBKIT_TESTRUNNER_SHARED_DIR}/EventSerialization/mac/EventSerializerMac.mm
+    ${WEBKIT_TESTRUNNER_SHARED_DIR}/EventSerialization/mac/SharedEventStreamsMac.mm
 )
 
 list(APPEND WebKitTestRunner_SOURCES
