@@ -1,3 +1,10 @@
+2017-04-01  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Unreviewed speculative Mac cmake buildfix after r214586, just for fun.
+        https://bugs.webkit.org/show_bug.cgi?id=161675
+
+        * WebKitTestRunner/PlatformMac.cmake:
+
 2017-03-31  Jonathan Bedard  <jbedard@apple.com>
 
         webkitpy: Add target host concept
